ihwa/envoy-gateway-system/envoy-gateway-system.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: envoy-gateway
  name: envoy-gateway-system
