ihwa/envoy-gateway-system/envoy-gateway-metrics-service.service.yaml
# Source: gateway-helm/templates/envoy-gateway-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway-metrics-service
  namespace: 'envoy-gateway-system'
  labels:
    control-plane: envoy-gateway
    helm.sh/chart: gateway-helm-v0.0.0-latest
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/instance: eg
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    control-plane: envoy-gateway
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/instance: eg
  ports:
  - name: http
    port: 19001
    protocol: TCP
    targetPort: 19001
