ihwa/envoy-gateway-system/envoy-gateway.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: eg
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: envoy-gateway
    app.kubernetes.io/version: latest
    control-plane: envoy-gateway
    helm.sh/chart: gateway-helm-v0.0.0-latest
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  ports:
  - name: grpc
    port: 18000
    targetPort: 18000
  - name: ratelimit
    port: 18001
    targetPort: 18001
  selector:
    app.kubernetes.io/instance: eg
    app.kubernetes.io/name: envoy-gateway
    control-plane: envoy-gateway
